big upload of assignments

--- a/09week/towers-of-hanoi/style.css
+++ b/09week/towers-of-hanoi/style.css
@@ -1,8 +1,13 @@
+/* .container {
+  display: flex;
+  flex-direction: row;
+} */
+
 [data-stack] {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  height: 101px;
+  height: 100px;
   background-color: aliceblue;
   margin: 25px;
 }
