--- a/checkpoint-three/css/style.css
+++ b/checkpoint-three/css/style.css
@@ -1,1 +1,58 @@
+header {
+    margin: auto;
+    width: 50%;
+    text-align: center;
+}
 
+.container {
+    background-image: url("../img/grandma.jpg");
+    background-size: cover;
+    background-color: lightblue;
+    margin: auto;
+    width: 25%;
+    height: 700px;
+    text-align: center;
+}
+
+.yarn {
+    background: transparent;
+    width: 150px;
+    margin-top: 35%;
+}
+
+.money {
+    margin: auto;
+    width:25%;
+    text-align: center;
+    font-size: 20px;
+}
+#totalmoney {
+    border:1px solid black;
+    display: inline-block;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+.item {
+    margin: auto;
+    width: 25%;
+    text-align: center;
+    font-size: 20px;
+}
+
+.cat {
+    background: transparent;
+    width: 100px;
+    display: inline-block;
+  }
+
+.catsowned {
+    display: inline-block;
+}
+
+#totalcats {
+    border:1px solid black;
+    display: inline-block;
+    padding-left: 10px;
+    padding-right: 10px;
+}
