Updated Final Checkpoint 3

--- a/checkpoint-three/css/styles.css
+++ b/checkpoint-three/css/styles.css
@@ -10,7 +10,6 @@ html{
 #wrapper{
     width: 500px;
     height: 500px;
-    border: 1px black solid;
     margin: 10px;
 }
 #symbol{
@@ -30,11 +29,11 @@ html{
 }
 
 .counter{
-    width: 50px;
+    width: 65px;
 }
 
 .cost{
-    width: 30px;
+    width: 45px;
 }
 
 .label{
@@ -46,6 +45,13 @@ html{
     border-radius: 5px;
     margin-top: 10px;
     padding: 5px;
+}
+.dmgCount{
+    font-size: 25pt;
+}
+
+h1{
+    margin-bottom: 5px;
 }
 
 .characters{
