--- a/05week/transitions-and-transformations/css/style.css
+++ b/05week/transitions-and-transformations/css/style.css
@@ -1,12 +1,12 @@
-* {
+html {
   box-sizing: border-box;
+  margin: 0 auto;
+  padding: 0;
 }
 
 body {
-  height: 100%;
   width: 100%;
-  margin: 0;
-  padding: 0;
+  height: 100%; 
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -14,7 +14,7 @@ body {
 }
 .grid__container {
   display: grid;
-  grid-template-columns: repeat(30, 1fr);
+  grid-template-columns: repeat(40, 1fr);
 }
 .squares {
   width: 40px;
