--- a/checkpoint-three/css/style.css
+++ b/checkpoint-three/css/style.css
@@ -1,1 +1,91 @@
+body    {
+    background-color: aqua;
+    background-image: url(../background.JPG);
+    height: 500px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
 
+h1  {
+    color: darkmagenta;
+    background-color: aqua;
+    text-align: center;
+    padding: 20px;
+    font-size: 70px;
+    border: yellow 2px solid;
+    margin: 10 100;
+}
+
+h2  {
+    color: red;
+    outline-color: black;
+    font-size: 50;
+    margin: 5;
+    padding: 5;
+}
+#cabeza {
+    width:390px;
+    height:390px;
+    background-color: brown;
+    border-radius:390px;
+  }
+  
+img {
+    transition: all 1s;
+    transition-timing-function: linear;
+  }
+  
+  #currentTotal {
+    width:200px;
+    height:50px;
+    border:1px solid black;
+    background-color: white;
+    text-align: center;
+    font-size: 48px;
+  } 
+   .master   {
+    display: flex;
+    text-align: center;
+    justify-content: space-between;
+    margin: 75;
+  }
+  .container    {
+      padding: 80px;
+  }  
+  .button {
+    width:250px;
+    height:55px;
+    border:1px solid purple;
+    text-align: end;
+    cursor:pointer;
+    margin:15 0;
+    background-color: aqua;
+    padding-top: 15;
+    padding-right: 15;
+    padding-bottom: 0;
+  }
+#bone {
+    background-image: url(../dudly.JPG);
+    background-repeat: no-repeat;
+  }
+#btwo {
+    background-image: url(../tyson.JPG);
+    background-repeat: no-repeat;
+}
+#bthree {
+    background-image: url(../ali.JPG);
+    background-repeat: no-repeat;
+}
+
+#three   {
+    background-image: url(../background2.JPG);
+    height: 390px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 10px;
+
+  }
+  
