--- a/checkpoint-one/css/style.css
+++ b/checkpoint-one/css/style.css
@@ -1,6 +1,10 @@
-.container {
-    border: 1px solid black;
+
+body {
+    border: 1px solid red;
+    height: 100%;
+    width: 100%;
+    
 }
-.box {
-    border: 1px dotted red;
+nav {
+    border: red solid;
 }
