--- a/checkpoint-two/css/style.css
+++ b/checkpoint-two/css/style.css
@@ -1,1 +1,253 @@
+@import url('https://fonts.googleapis.com/css?family=Charm|Open+Sans');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Acme', sans-serif;
+}
+body {
+  width: 100%;
+  height: 100%;
+    position: relative;
+}
+img.body {
+  width: 100%;
+  float: left;
+  height: 100%;
+  position: absolute;
 
+}
+header {
+  width: 100%;
+  height: 10%;
+  background: yellow;
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  color: white;
+}
+ul.amber {
+  display: flex;
+  flex-direction: row;
+  font-size: 30px;
+  /* margin-left: 30px; */
+  list-style: none;
+  color: white;
+  padding: 1em;
+}
+li.amber {
+  border: 2px solid black;
+  background: black;
+  padding: 5px;
+  height: 50px;
+  width: 50px;
+  animation: rollFromLeft 3s linear forwards;
+  display: flex;
+  justify-content: center;
+  
+}
+@keyframes rollFromLeft {
+  0% {
+    transform: translateX(-400px) rotate(0);
+    border-radius: 0 0 0 0;
+  }
+  25% {
+    transform: translateX(-300px) rotate(90deg);
+    border-radius: 50% 0 0 0;
+  }
+  50% {
+    transform: translateX(-200px) rotate(180deg);
+    border-radius: 50% 50% 0 0;
+  }
+  75% {
+    transform: translateX(-100px) rotate(270deg);
+    border-radius: 50% 50% 50% 0;
+  }
+  100% {
+    transform: translateX(0) rotate(360deg);
+    border-radius: 50% 50% 50% 50%;
+  }
+}
+
+ul.jones {
+
+  display: flex;
+  flex-direction: row;
+  font-size: 30px;
+  margin-left: 30px;
+  list-style: none;
+  padding: 1em;
+
+}
+li.jones {
+  border: 2px solid black;
+  background: black;
+  padding: 5px;
+  height: 50px;
+  width: 50px;
+  animation: rollFromRight 3s linear;
+  animation-fill-mode: forwards;
+  display: flex;
+  justify-content: center;
+  
+}
+@keyframes rollFromRight {
+  0% {
+    transform: translateX(400px) rotate(0);
+    border-radius: 0 0 0 0;
+  }
+  25% {
+    transform: translateX(300px) rotate(-90deg);
+    border-radius: 50% 0 0 0;
+  }
+  50% {
+    transform: translateX(200px) rotate(-180deg);
+    border-radius: 50% 50% 0 0;
+  }
+  75% {
+    transform: translateX(100px) rotate(-270deg);
+    border-radius: 50% 50% 50% 0;
+  }
+  100% {
+    transform: translateX(0) rotate(-360deg);
+    border-radius: 50% 50% 50% 50%;
+  }
+}
+
+#grid-wrapper {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(12, 1fr);
+  width: 100%;
+  height: 100%;
+  border-left: 20px solid #764522;
+  border-right: 20px solid #764522;
+  position: absolute;
+}
+.box1 {
+  display: grid;
+  grid-area: box1;
+  grid-column: 1 / 3;
+  grid-row: 7 / -1;
+  
+  /* border: 5px solid black; */
+}
+img.box1 {
+  width: 310px;
+  height: 450px;
+  margin-top: 48px;
+
+}
+.box2 {
+  display: grid;
+  grid-area: box2;
+  grid-column: 1 / 6;
+  grid-row: 4 / 9;
+  font-family: 'Charm', cursive;
+  font-size: 250px;
+  color: white;
+
+}
+p.Coding  {
+  font-family: 'Charm', cursive;
+  display: inline-block;
+  
+}
+.box3 {
+  display: grid;
+  grid-area: box2;
+  grid-column: 9 / -1;
+  grid-row: 4 / 9;
+  font-family: 'Charm', cursive;
+  font-size: 250px;
+  color: white;
+  float: right;
+}
+p.girls {
+  font-family: 'Charm', cursive;
+
+}
+
+/* .box1 {
+  display: grid;
+  grid-area: box1;
+  grid-column: 1 / 5;
+  grid-row: 2 / 7;
+  border: 5px solid black;
+  transform: rotate(-30deg);
+  margin-top: 100px;
+}
+#b1-n1 {
+  width: 100%;
+  height: 100%;
+  background: blue;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  flex: 10px;
+  /* background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR72NgTd1NHI1oV9rOTkpTXotI1PB_CzVgEO24lFDWcIlxyXcT-);
+  background-size: cover;
+  background-position: center; 
+}
+.b1-n1-flex1 {
+  height: 100%;
+  width: 33.3%;
+  float: left;
+  display: flex;
+  justify-content: flex-start;
+  border-right: 2px dotted dodgerblue;
+}
+img.google {
+  width: 100%;
+  height: 25%;
+}
+.b1-n1-flex2 {
+  height: 100%;
+  width: 33.3%;
+  float: left;
+}
+.b1-n1-flex3 {
+  height: 100%;
+  width: 33.3%;
+  float: left;
+}
+.box2 {
+  display: grid;
+  grid-area: box2;
+  grid-column: 7 / 10;
+  grid-row: 2 / 10;
+  background: black;
+}
+.box3 {
+  display: grid;
+  grid-area: box3;
+  grid-column: 4 / span 4;
+  grid-row: 5 / span 5;
+}
+#g1-b3-n3 {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  width: 100%;
+  height: 100%;
+  padding: 10%;
+}
+
+img.b3-n3 {
+  display: grid;
+  grid-area: img;
+  grid-column: 2 / -1;
+  grid-row: 1 / -1;
+  width: 300px;
+  height: 300px;
+  border-radius: 50% 50%;
+  animation: spin 30s linear infinite ;
+  border: 2px solid #ccc;
+  box-shadow: #CCC -20px -20px 50px 2px inset 0 0 20px 2px;
+}
+@keyframes spin {
+  100% {
+    transform: rotate(360deg)
+  }
+} 
