--- a/checkpoint-two/css/style.css
+++ b/checkpoint-two/css/style.css
@@ -168,7 +168,58 @@ p.girls {
   font-family: 'Charm', cursive;
 
 }
-
+.box4 {
+  display: grid;
+  grid-area: box4;
+  grid-column: 6 / span 2;
+  grid-row: 4/ span 4;
+}
+img.box4 {
+  width: 100%;
+  height: 100%;
+}
+.box5 {
+  display: grid;
+  grid-area: box4;
+  grid-column: 2 / 5;
+  grid-row: 3;
+}
+hr{
+  color: pink;
+  background: pink;
+  height: 25%;
+  width: 100%;
+  border: 1px solid pink;
+  box-shadow: 0 7px 4px plum;
+}
+.box6 {
+  display: grid;
+  grid-area: box4;
+  grid-column: 9 / span 3;
+  grid-row: 3;
+}
+hr {
+  color: pink;
+  background: pink;
+  height: 25%;
+  width: 100%;
+  border: 1px solid pink;
+}
+.box7 {
+  display: grid;
+  grid-area: box7;
+  grid-column: 4 / 10;
+  grid-row: 9 / -1;
+  background-color: #092ad491;
+}
+.box8 {
+  display: grid;
+  grid-area: box7;
+  grid-column: 5;
+  grid-row: 9 / -1;
+  border-left: 1px solid yellow;
+  border-right: 2px solid yellow;
+}
 /* .box1 {
   display: grid;
   grid-area: box1;
