--- a/checkpoint-two/css/style.css
+++ b/checkpoint-two/css/style.css
@@ -157,7 +157,7 @@ p.Coding  {
 .box3 {
   display: grid;
   grid-area: box2;
-  grid-column: 9 / -1;
+  grid-column: 6 / span 2;
   grid-row: 4 / 9;
   font-family: 'Charm', cursive;
   font-size: 250px;
@@ -171,7 +171,7 @@ p.girls {
 .box4 {
   display: grid;
   grid-area: box4;
-  grid-column: 6 / span 2;
+  grid-column: 5;
   grid-row: 4/ span 4;
 }
 img.box4 {
@@ -209,16 +209,129 @@ hr {
   display: grid;
   grid-area: box7;
   grid-column: 4 / 10;
-  grid-row: 9 / -1;
-  background-color: #092ad491;
+  grid-row: 10 / -1;
+  background-color: blue;
+  transform: skew(20deg);
+  z-index: -.1;
 }
-.box8 {
+/* .box8 {
   display: grid;
   grid-area: box7;
   grid-column: 5;
   grid-row: 9 / -1;
   border-left: 1px solid yellow;
   border-right: 2px solid yellow;
+} */
+/* .box9 {
+  display: grid;
+  grid-area: box8 ;
+  grid-column: 7;
+  grid-row: 9 / -1;
+  border-left: 1px solid yellow;
+  border-right: 2px solid yellow;
+} */
+/* .box10 {
+  display: grid;
+  grid-area: box7;
+  grid-column: 9;
+  grid-row: 9 / -1;
+  border-left: 1px solid yellow;
+} */
+.box11 {
+  display: grid;
+  grid-area: box11;
+  grid-row: 9 / -1;
+  grid-column: 4;
+}
+#box11  {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-direction: row;
+}
+a.diagonal1 {
+  color: white;
+  transform: rotate(-90deg);
+  font-size: 20px;
+  position: relative;
+  left: 90px;
+}
+a.diagonal1:active {
+  color: royalblue;
+}
+a.diagonal1:hover {
+  transform: scale(1);
+  color: yellow;
+  background: navy;
+  top: 150;
+}
+i {
+  color: yellow;
+  z-index: 1;
+}
+.box12 {
+  display: grid;
+  grid-area: box11;
+  grid-row: 9 / -1;
+  grid-column: 5;
+}
+#box12  {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-direction: row;
+}
+a.diagonal2 {
+  color: white;
+  transform: rotate(-90deg);
+  font-size: 20px;
+  position: relative;
+  left: 90px;
+}
+a.diagonal2:active {
+  color: royalblue;
+}
+a.diagonal2:hover {
+  transform: scale(1);
+  color: navy;
+  background: hotpink;
+  top: 90;
+}
+i {
+  color: yellow;
+  z-index: 1;
+}
+.box13 {
+  display: grid;
+  grid-area: box11;
+  grid-row: 9 / -1;
+  grid-column: 6 ;
+}
+#box13  {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-direction: row;
+}
+a.diagonal3 {
+  color: white;
+  transform: rotate(-90deg);
+  font-size: 20px;
+  position: relative;
+  left: 90px;
+}
+a.diagonal3:active {
+  color: royalblue;
+}
+a.diagonal3:hover {
+  transform: scale(1);
+  color: navy;
+  background: orangered;
+  top: 50;
+}
+i {
+  color: yellow;
+  z-index: 1;
 }
 /* .box1 {
   display: grid;
