--- a/06week/Holiday_Brutalist/CSS/style.css
+++ b/06week/Holiday_Brutalist/CSS/style.css
@@ -174,11 +174,82 @@ a.diagonal2 {
   width: 100%;
   color: yellow;
 }
-@media(min-width:766 ) {
-  .box2 {
-    font-size: 60px;
+.box6 {
+  display: none;
+}
+@media(min-width: 766px) {
+  p.coding {
+    font-size: 80px;
   }
-  .box8{
+  p.girls {
+    font-size: 80px;
+  }
+  header {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+  }
+  ul {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+  }
+  li {
+    background: black;
+    border: 1px solid black;
+    height: 60px;
+    width: 60px;
+    font-size: 25px;
     font-size: 40px;
+    font-weight: 700;
+    padding: 5px;
+  }
+  li:nth-of-type(even) {
+    color: red
+  }
+  .box7 {
+    font-size: 40px;
+    color: white;
+  }
+  .box8 {
+    font-size: 40px;
+    color: white;
+  }
+}
+@media(min-width: 1000px) {
+  p.coding {
+    font-size: 380px;
+  }
+  .box2 {
+    display: grid;
+    grid-area: box2;
+    grid-column: 1 / span 4;
+    grid-row: 1 / span 6;
+    color: pink;
+    z-index: 1;
+  }
+  p.girls {
+    font-size: 380px;
+  }
+  .box3 {
+    display: grid;
+    grid-area: box2;
+    grid-column: 8 / span 4;
+    grid-row: 1 / span 6;
+    color: pink;
+    z-index: 1;
+  }
+  .box4 {
+    display: none;
+  }
+  .box6 {
+    display: grid;
+    grid-area: box6;
+    grid-column: 5 / span 4;
+    grid-row: 1 / 10;
+  }
+  img.box6 {
+    width: 100%;
+    height: 100%;
   }
 }
