--- a/04week/tomorrows-technology/css/style.css
+++ b/04week/tomorrows-technology/css/style.css
@@ -115,10 +115,38 @@ p {
 }
 }
 @media only screen and (max-width:375px){
-	.mobile-main {
-		display: row;
-		
-
+	.mobile-main div {
+		display: inline-block;
+		flex-direction: row;
+		background-color: grey;
+		color: white;
+		font-size: 10px;
+		padding: 0;
+		width: 250px;
+	
+	}
+	.main-links {
+		border: 1px solid red;
+		display: inline-block;
+		width: 200px;
+		margin: auto;
+		height: 200px;
+		color: white;
+		font-size: 20px;
+		/* padding: 40%; */
+		text-align: center;
+		margin-left: 25px;
+	}
+	.social-media {
+		border: 1px solid black;
+		display: inline-block;
+		margin: auto;
+		height: 200px;
+		/* padding: 40%; */
+		width: 200px;
+		/* color: white; */
+		text-align: center;
+		font-family: 'Thasadith' sans-serif;
 	}
 
 }
